@@ -82,16 +82,14 @@ LAYERING_PRMS:
     # Minimum okta value below which cluster splitting is not attempted
     min_okta_to_split: 2
     # Minimum separation (in ft) between the mean altitude of identified layers inside groups
-    # with a base altitude <=10'000ft. Any layers separated by less than this value will not be
-    # split. Any value < than 5 times the vertical resolution of the data will raise a warning, as
-    # it may lead to an over-layering of groups. For the ampycloud METAR messages to be consistent
-    # with the ICAO rules of layer selection, this should be >=100 ft.
-    min_sep_low: 150
-    # Same as min_sep_low, but for layers identified in groups with a base height >10'000 ft. For
-    # the ampycloud METAR messages to be consistent with the ICAO rules of layer selection, this
-    # should be >=1000 ft.
-    min_sep_high: 1000
-    # Gaussian Mixture Model parameters
+    # with a base altitude in the bins set by min_sep_lims. Any layers separated by less than this
+    # value will not be split. Any value < than 5 times the vertical resolution of the data will
+    # raise a warning, as it may lead to an over-layering of groups. For the ampycloud METAR
+    # messages to be consistent with the ICAO rules of layer selection, this should be >=100 ft
+    # below 10'000 ft.
+    min_sep_vals: [150, 1000]
+    # Altitude threshold between the min_sep_val elements.
+    min_sep_lims: [10000]
     gmm_kwargs:
         # Whether to use 'BIC' or 'AIC' scores to decide which model is "best".
         scores: BIC
